--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}
+				{{ siteName }} - MinigameSite
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" type="text/css" href="/styles/bootstrap.css">
+			<link rel="stylesheet" type="text/css" href="/styles/override.css">
+			<link rel="stylesheet" type="text/css" href="/styles/main.css">
+		{% endblock %}
+	</head>
+	<body>
+		{% block body %}
+			{% include "menu.html.twig" %}
+			{% block site %}{% endblock %}
+		{% endblock %}
+		{% block javascripts %}
+			<script src="/scripts/jquery-3.5.1.js"></script>
+			<script src="/scripts/bootstrap.bundle.js"></script>
+		{% endblock %}
+	</body>
 </html>
